--- a/src/app/BackEnd/statistiques/statistiques.component.html
+++ b/src/app/BackEnd/statistiques/statistiques.component.html
@@ -13,7 +13,7 @@
         </li>
         <li class=" nav-item"><a href="javascript:void(0);"><i class="feather icon-message-circle"></i><span class="menu-title" data-i18n="Form Layout">Comments Statistiques</span></a>
         </li>
-        <li class=" nav-item"><a href="javascript:void(0);"><i class="feather icon-calendar"></i><span class="menu-title" data-i18n="Form Layout">Events Statistiques</span></a>
+        <li class=" nav-item"><a [routerLink]="['/Dashboard/StatsEvents']"><i class="feather icon-calendar"></i><span class="menu-title" data-i18n="Form Layout">Events Statistiques</span></a>
         </li>
         <li class=" nav-item"><a href="javascript:void(0);"><i class="feather icon-edit"></i><span class="menu-title" data-i18n="Form Layout">Posts Statistiques</span></a>
         </li>
