--- a/src/app/Components/scripts/scripts.component.html
+++ b/src/app/Components/scripts/scripts.component.html
@@ -1,24 +1,7 @@
 
-<script>(function() {function maybePrefixUrlField() {
-	if (this.value.trim() !== '' && this.value.indexOf('http') !== 0) {
-		this.value = "http://" + this.value;
-	}
-}
-
-var urlFields = document.querySelectorAll('.mc4wp-form input[type="url"]');
-if (urlFields) {
-	for (var j=0; j < urlFields.length; j++) {
-		urlFields[j].addEventListener('blur', maybePrefixUrlField);
-	}
-}
-})();</script><link rel="stylesheet" id="e-animations-css" href="/assets/animations.css" type="text/css" media="all">
+<link rel="stylesheet" id="e-animations-css" href="/assets/animations.css" type="text/css" media="all">
 <script type="text/javascript" src="/assets/regenerator-runtime.js" id="regenerator-runtime-js"></script>
 <script type="text/javascript" src="/assets/wp-polyfill.js" id="wp-polyfill-js"></script>
-<script type="text/javascript" id="contact-form-7-js-extra">
-/* <![CDATA[ */
-var wpcf7 = {"api":{"root":"https:\/\/demo.themewinter.com\/wp\/buildbench\/wp-json\/","namespace":"contact-form-7\/v1"}};
-/* ]]> */
-</script>
 <script type="text/javascript" src="/assets/index.js" id="contact-form-7-js"></script>
 <script type="text/javascript" src="/assets/bootstrap.js" id="bootstrap-js"></script>
 <script type="text/javascript" src="/assets/popper.js" id="popper-js"></script>
