--- a/src/app/Components/review/get-review-by-users/get-review-by-users.component.css
+++ b/src/app/Components/review/get-review-by-users/get-review-by-users.component.css
@@ -398,3 +398,211 @@ button:focus+.design-container {
   font-size: 16px;
   font-family: 'Segoe UI', -apple-system, BlinkMacSystemFont, sans-serif;
 }
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bree+Serif&family=EB+Garamond:ital,wght@0,500;1,800&display=swap');
+
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+* {
+  box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
+}
+body {
+  font-family: 'Montserrat', sans-serif;
+  background-color: #fbeee3;
+}
+.top_part
+{
+  width:100%;
+  height:450px;
+  background-color: #eee;
+  background-image: url('../../../../assets/wll.jpg');
+  background-position: center;
+  position: relative;
+}
+.overlay
+{
+  position: sticky !important;
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0,0,0,0.6);
+  z-index: 2;
+
+}
+.filter_part
+{
+  width: 60%;
+    position: absolute;
+    top: 345px;
+    height: 200px;
+    background-color: rgb(252, 252, 252);
+    box-shadow: 0 -1px 4px 0 rgb(26 26 26 / 8%), 0 4px 8px 0 rgb(26 26 26 / 12%);
+    right: 300px;
+    padding: 30px;
+    z-index: 99;
+    border-radius: 5px;
+}
+.container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin: 200px auto 100px auto;;
+  width: 1040px;
+  max-width: 1500px;
+  height: 500px;
+  /*background-color: aquamarine;*/
+}
+.carousel {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  width: 430px;
+  max-width: 350px;
+  margin:20px 30px;
+  height:470px;
+  border-radius: 8px;
+
+}
+.carousel_content
+{
+  display: flex;
+  flex-direction: column;
+  height:40%;
+  padding: 15px;
+  background-color: #eee;
+  border-radius:8px;
+}
+.carousel_content h3
+{
+  font-weight: 700;
+}
+.carousel_img{
+   width: 100%;
+   height: 55%;
+   border-radius: 3% 3% 0 0;
+   background-image: url('../../../../assets/wll.jpg');
+   background-position: center;
+
+}
+.partie_louta
+{
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  margin:30px 0 20px 0 ;
+}
+.categ_sel
+{
+  border: none;
+  width: 30%;
+  height: 45px;
+  font-size: 15px;
+  background-color: #eee;
+  border-bottom: 1px solid rgb(30, 169, 118);
+  border: 2px;
+  position:relative;
+  border-radius: 2px;
+}
+.recherche
+{
+  border: none;
+  width: 30%;
+  height: 45px;
+  font-size: 15px;
+  background-color: #eee;
+  border-bottom: 1px solid rgb(30, 169, 118);
+  border: 2px;
+  margin: 29px 10px;
+  border-radius: 2px;
+  padding:10px;
+}
+.submit_bt
+{
+  border:none;
+  background-color: #27ada7;
+  padding: 7px 35px;
+  font-size: 18px;
+  position:absolute;
+  top: 74px;
+  border-radius: 2px;
+  font-weight: 400;
+  color:white;
+  margin-top: -14px;
+}
+/* From uiverse.io by @nikk7007 */
+button {
+ padding: 0.8em 1.8em;
+ border: 0px solid #17C3B2;
+ position: relative;
+ overflow: hidden;
+ background-color: transparent;
+ text-align: center;
+ text-transform: uppercase;
+ font-size: 16px;
+ transition: .3s;
+ z-index: 1;
+ font-family: inherit;
+ color: #17C3B2;
+}
+
+button::before {
+ content: '';
+ width: 0;
+ height: 300%;
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%, -50%) rotate(45deg);
+ background: #17C3B2;
+ transition: .5s ease;
+ display: block;
+ z-index: -1;
+}
+
+button:hover::before {
+ width: 105%;
+}
+
+button:hover {
+ color: #111;
+}
+
+/* From uiverse.io by @nikk7007 */
+button {
+ padding: 0.8em 1.8em;
+ 
+ position: relative;
+ overflow: hidden;
+ background-color: transparent;
+ text-align: center;
+ text-transform: uppercase;
+ font-size: 16px;
+ transition: .3s;
+ z-index: 1;
+ font-family: inherit;
+ color: #17C3B2;
+}
+
+button::before {
+ content: '';
+ width: 0;
+ height: 300%;
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ transform: translate(-50%, -50%) rotate(45deg);
+ background: #17C3B2;
+ transition: .5s ease;
+ display: block;
+ z-index: -1;
+}
+
+button:hover::before {
+ width: 105%;
+}
+
+button:hover {
+ color: #111;
+}
+
