--- a/src/app/Components/reclamation/list-reclamations-by-user/list-reclamations-by-user.component.html
+++ b/src/app/Components/reclamation/list-reclamations-by-user/list-reclamations-by-user.component.html
@@ -3,11 +3,10 @@
 
 <div class="body-innner-content ">
     <div id="banner-area" class="banner-area bg-overlay banner-bg">
-        <div class="container-fluid p-0 ">
-            <div class="banner-heading banner-heading-full"
-                style="background-image:url(//demo.themewinter.com/wp/buildbench/wp-content/uploads/2019/03/image07-min.png);">
+        <div class="container-fluid p-0 "  style="background-image:url('../../../../assets/levi-meir-clancy-jZaQOzrC3XU-unsplash.jpg');">
+            <div class="banner-heading banner-heading-full">
                 <h3 class="banner-title mt-192 ">
-                    Reclamations
+                    Complaints
                 </h3>
             </div>
         </div>
@@ -57,10 +56,7 @@
                         <div class="post-body clearfix" *ngFor="let r of reclamations">
                             <div class="entry-header">
                                 <h2 class="entry-title">
-                                    <a
-                                        href="https://demo.themewinter.com/wp/buildbench/blog/2019/03/21/support-development-for-more-experience-2/">
-                                        {{r.objet}}
-                                    </a>
+                                    {{r.objet}}
                                 </h2>
                             </div>
                             <div class="post-content">
@@ -74,27 +70,42 @@
                                     {{r.status}}
                                 </div>
                                 <div align="center">
-                                    <a class="readmore" [routerLink]="['/Reclamations/Show/',r.idReclamation]">
-                                        <h3>View Response</h3>
-                                    </a>
-                                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-                                        view 
-                                      </button>
-
+                                    <button type="button" class="btn" data-toggle="modal" data-target="#exampleModal"
+                                        [disabled]="r.status == 'WAITING' || r.status == 'INPROGRESS'">
+                                        View Response
+                                    </button>
                                 </div>
-                                <!--<div class="post-footer readmore-btn-area" align="center">
-                                    <a class="readmore" (click)="treatReclamation()">
-                                        <h3>Treat Reclamation</h3>
-                                    </a>
-                                </div>-->
-                                <!--<div align="center">
-                                    <div class="post-body clearfix" style="width:90%;">
-                                        response
+                                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+                                aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog" role="document" style="margin: 19.75rem auto;">
+                                    <div class="modal-content">
+                                        <h1>Status = {{r.status}}</h1>
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">
+                                                Response of reclamation
+                                            </h5>
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                <span aria-hidden="true">&times;</span>
+                                            </button>
+                                        </div>
+                                        <div align="right">
+                                            {{r.processingDate}}
+                                        </div>
+                                        <div class="modal-body">
+                                            {{r.response}}
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary"
+                                                data-dismiss="modal">Close</button>
+                                        </div>
                                     </div>
-                                </div>-->
-
+                                </div>
                             </div>
-                            <!-- Post content right-->
+                            </div>
+
+                            
+
+
                         </div>
                         <!-- post-body end-->
                     </article>
@@ -103,27 +114,6 @@
             </div><!-- .row -->
         </div><!-- .container -->
     </section><!-- #main-content -->
-
-
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              ...
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
-          </div>
-        </div>
-      </div>
 
     <script>(function () {
             function maybePrefixUrlField() {
@@ -188,8 +178,12 @@
 
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+    integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 
 <app-footer></app-footer>
 <app-scripts></app-scripts>
