--- a/src/app/Components/article/get-by-id-article/get-by-id-article.component.html
+++ b/src/app/Components/article/get-by-id-article/get-by-id-article.component.html
@@ -46,7 +46,18 @@
 
   </div>
 -->
+<!--
 
+
+<div>
+  <div *ngFor="let a of articlee">
+    <p> {{a.title}}</p>
+    <p> {{a.description}}</p>
+    <p> {{a.dateCreation}}</p>
+    <p> {{a.category}}</p>
+  </div>
+</div>
+-->
 </div>
 
 
