--- a/src/app/Components/article/get-by-id-article/get-by-id-article.component.html
+++ b/src/app/Components/article/get-by-id-article/get-by-id-article.component.html
@@ -1,7 +1,7 @@
 <app-head></app-head>
 <app-header></app-header>
 <div class="" style="margin:100px;">
-  <div class="" style="">
+  <div class="" >
     <nav style="margin: 0 auto;">
       <a href='/afficher-article/' class="mr-2">Articles</a>
       <span class="mr-2"><fa-icon [icon]="faAngleRight"></fa-icon></span>
@@ -32,7 +32,7 @@
       <textarea style="width:70%;
       background-color: #f8f8f8;
       border-radius: 3px;
-      border: 1px solid #d8d8d8;padding:10px;" class="" id="commentaire" rows="5"></textarea>
+      border: 1px solid #d8d8d8;padding:10px;" placeholder="Tap Here" class="" id="commentaire" rows="5"></textarea>
     </div>
 
 
