--- a/src/app/Components/article/add-article/add-article.component.html
+++ b/src/app/Components/article/add-article/add-article.component.html
@@ -1,3 +1,7 @@
+
+<app-head></app-head>
+<app-header></app-header>
+<div style="margin: 200px;">
 <p>add-article works!</p>
 <form #article="ngForm" >
   <div class="form-group" style="max-width: 50%;" class="d-flex flex-column justify-content-center">
@@ -26,3 +30,6 @@
 
 
 </form>
+</div>
+<app-footer></app-footer>
+<app-scripts></app-scripts>
