--- a/src/app/Components/review/addchoice-companyor-employee/addchoice-companyor-employee.component.html
+++ b/src/app/Components/review/addchoice-companyor-employee/addchoice-companyor-employee.component.html
@@ -15,7 +15,7 @@
 					<div class="flex ">
 
 						<div>
-							<span class="icon fa-car"></span>
+							<span class="icon fa-bug"></span>
 							<h3>Be Free</h3>
 							<p>Feel free to update your review if needed <br>Check the dates of the reviews. </p>
 						</div>
@@ -27,7 +27,7 @@
 						</div>
 
 						<div>
-							<span class="icon fa-camera"></span>
+							<span class="icon fa-bug"></span>
 							<h3> negative&anonymous </h3>
 							<p> Some people leave a review or feedback <br>to provide what they want to say </p>
 						</div>
@@ -37,7 +37,7 @@
 					</div>
 
 					<footer style="">
-						<a href="#" class="button" [routerLink]="['/AddreviewEmpl']">Add review </a>
+						<a href="#" class="button" [routerLink]="['/choiceadd']">Add review </a>
                         <p style="justify-content: center;margin: auto 0;">Or</p>
                         <a href="#" class="button" [routerLink]="['/afficherreviewbyuser']">Show reviews</a>
 					</footer>
