--- a/src/app/Components/review/listadd-emplorcompany/listadd-emplorcompany.component.html
+++ b/src/app/Components/review/listadd-emplorcompany/listadd-emplorcompany.component.html
@@ -1,6 +1,16 @@
-
+<!DOCTYPE HTML>
+<!--
+	Projection by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
 <html>
-	
+	<head>
+		
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		
+	</head>
 	<body>
 
 		
@@ -9,61 +19,66 @@
 			<section id="banner">
 				<div class="inner">
 					<header>
-						<h1>Welcome to Review</h1>
+						<h1>Welcome to have to choice!</h1>
 					</header>
 
-					<div class="flex ">
+					<!-- <div class="flex ">
 
 						<div>
 							<span class="icon fa-car"></span>
-							<h3>Be Free</h3>
-							<p>Feel free to update your review if needed <br>Check the dates of the reviews. </p>
-						</div>
-
-                        <div>
-							<span class="icon fa-bug"></span>
-							<h3>Received Review</h3>
-							<p>Read as many reviews as possible</p>
+							<h3>Aliquam</h3>
+							<p>Suspendisse amet ullamco</p>
 						</div>
 
 						<div>
 							<span class="icon fa-camera"></span>
-							<h3> negative&anonymous </h3>
-							<p> Some people leave a review or feedback <br>to provide what they want to say </p>
+							<h3>Elementum</h3>
+							<p>Class aptent taciti ad litora</p>
 						</div>
-                        
-						
+
+						<div>
+							<span class="icon fa-bug"></span>
+							<h3>Ultrices</h3>
+							<p>Nulla vitae mauris non felis</p>
+						</div>
 
 					</div>
 
-					
+					<footer>
+						<a href="#" class="button">Get Started</a>
+					</footer> -->
 				</div>
 			</section>
-            <section id="three" class="wrapper align-center">
+
+
+		<!-- Three -->
+			<section id="three" class="wrapper align-center">
 				<div class="inner">
 					<div class="flex flex-2">
-						<article>
-							<div class="image round">
-								<img src="../../../../assets/oussema.jpg" alt="Pic 01" />
+						<article  style="    display: flex;
+                        flex-direction: column;
+                        align-items: center;">
+							<div class="image rounde" style=" border-radius: 50%; display: block; ">
+								<img src="../../../../assets/empl.jpg" alt="Pic 01" style="width: 200px;border-radius: 50%;margin-left:16px"/>
 							</div>
 							<header>
-								<h3>Lorem ipsum<br /> dolor amet nullam</h3>
+								<h3>select to add review<br />  for Employee</h3>
 							</header>
-							<p>Morbi in sem quis dui placerat ornare. Pellentesquenisi<br />euismod in, pharetra a, ultricies in diam sed arcu. Cras<br />consequat  egestas augue vulputate.</p>
+							<p>Be critical of negative and anonymous reviews. <br />you communicate your ideas and vision clearly <br />so others can understand it easily and quickly</p>
 							<footer>
-								<a href="#" class="button">Learn More</a>
+								<a href="#" class="button" [routerLink]="['/AddreviewEmpl']">AddreviewEmpl</a>
 							</footer>
 						</article>
 						<article>
-							<div class="image round">
-								<img src="../../../../assets/Abdo.jpg" alt="Pic 02" />
+							<div class="image rounde" style=" border-radius: 50%; display: block; width: 200px;">
+								<img src="../../../../assets/company.jpg" alt="Pic 02" style="width: 200px;border-radius: 50%;margin-left:190px"/>
 							</div>
 							<header>
-								<h3>Sed feugiat<br /> tempus adipicsing</h3>
+								<h3>select to add review<br /> for Company</h3>
 							</header>
-							<p>Pellentesque fermentum dolor. Aliquam quam lectus<br />facilisis auctor, ultrices ut, elementum vulputate, nunc<br /> blandit ellenste egestagus commodo.</p>
+							<p>Take a second to Provide essential information<br />Some people leave a review or feedback <br /> when they have something to complain about.</p>
 							<footer>
-								<a href="#" class="button">Learn More</a>
+								<a href="#" class="button" [routerLink]="['/AddreviewCompany']">AddreviewComp</a>
 							</footer>
 						</article>
 					</div>
@@ -71,9 +86,11 @@
 			</section>
 
 
-		
-
-		
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
